# plato

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  bundle.sh  devenv.nix  dist.sh  download.sh  release-please-config.json  release-plz.toml
.github/: dependabot.yml
.github/instructions/: rust.instructions.md  self-explanatory-code-commenting.instructions.md
.github/workflows/: build-release-candidate.yml  cargo.yml  ci.yml  copilot-setup-steps.yml  release.yml
contrib/: Settings-sample.toml  cadmus.sh  config-sample.sh  plato.sh
contrib/NickelMenu/: cadmus
crates/cadmus/: Cargo.toml  build.rs
crates/cadmus/src/: app.rs  main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: color.rs  context.rs  device.rs  geom.rs  gesture.rs  helpers.rs  lib.rs  metadata.rs
crates/core/src/battery/: fake.rs  kobo.rs
crates/core/src/document/: djvu.rs  mod.rs  pdf.rs
crates/core/src/font/: mod.rs
crates/core/src/framebuffer/: image.rs  kobo1.rs  kobo2.rs  linuxfb_sys.rs  transform.rs
crates/emulator/: Cargo.toml
crates/emulator/src/: main.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: main.rs
crates/importer/: Cargo.toml
crates/importer/src/: main.rs
crates/plato/: Cargo.toml
crates/plato/src/: app.rs
crates/ui-dev/: .gitignore  Cargo.toml  README.md  build.rs
crates/ui-dev/src/: main.rs  view.rs  view.rs.template
doc/: BUILD.md  EVENT_SYSTEM.md  GUIDE.md  HOOKS.md  LIBRARY.md  MANUAL.md
keyboard-layouts/: terminal.json
xtask/: Cargo.toml
xtask/src/: main.rs
(+66 files in other folders)
